<resources>
    <string name="app_name">SonuSync</string>

    <string name="icon_library">Library</string>
    <string name="icon_search">Search</string>
    <string name="icon_settings">Settings</string>

    <string name="frag_lib_all_songs">All Songs</string>
    <string name="frag_lib_albums">Albums</string>
    <string name="frag_lib_artists">Artists</string>

    <string name="default_title">Unknown Title</string>
    <string name="default_artist">Unknown Artist</string>
    <string name="default_duration">xx:xx</string>

    <string name="play_pause_fab">Play/Pause Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="shuffle_btn">Shuffle Button</string>
    <string name="next_btn">Next Button</string>
    <string name="prev_btn">Previous Button</string>

    <string name="music">Music</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <string name="tab_layout">Tab Layout</string>
    <string name="ensemble_cover">Ensemble Cover</string>

    <string name="go_back">Go Back</string>
    <string name="search_hint">Search Your Music Here!</string>
</resources>