<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="15dp"
    style="@style/musicItemBackground">

    <ImageView
        android:id="@+id/ivItemCover"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/default_album_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/default_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toEndOf="@+id/ivItemCover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvItemArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="5dp"
        android:text="@string/default_artist"
        android:maxLength="25"
        android:ellipsize="end"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/ivItemCover"
        app:layout_constraintTop_toBottomOf="@+id/tvItemTitle" />

    <TextView
        android:id="@+id/tvItemDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/default_duration"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/ic_music_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>